--- a/src/Data/projects.json
+++ b/src/Data/projects.json
@@ -3,15 +3,15 @@
       "title": "Project A",
       "imageSrc": "project/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "skills": ["React", "CSS", "Node"],
+      "demo": "https://todolisteicarg.netlify.app/",
+      "source": "https://github.com/gragra-kj/Todoist"
     },
     {
       "title": "Project B",
       "imageSrc": "project/project.png",
       "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node", "Sass"],
+      "skills": ["React", "CSS", "Node", "Sass"],
       "demo": "https://www.example.com",
       "source": "https://www.github.com"
     },
